--- a/app/views/shared/_brand.html.erb
+++ b/app/views/shared/_brand.html.erb
@@ -1,5 +1,8 @@
+<%# locals: () %>
 <div class="flex items-center gap-2">
   <%# optional logo %>
   <%# <%= image_tag "logo.svg", alt: "", class: "h-6 w-6" %> %>
-  <%= link_to "BankEncoRRe", root_path, class: "text-lg font-semibold" %>
+# frozen_string_literal: true
+link_to 'BankEncoRRe', root_path, class: 'text-lg font-semibold'
+ %>
 </div>
