--- a/app/views/shared/_close_modal.html.erb
+++ b/app/views/shared/_close_modal.html.erb
@@ -1,2 +1,3 @@
+<%# locals: () %>
 <turbo-frame id="comm_modal_frame"></turbo-frame>
 <script>document.getElementById("comm-modal")?.close()</script>
