--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -1,7 +1,7 @@
 <%# locals: () %>
 <!-- app/views/shared/_modal.html.erb -->
 <dialog id="comm-modal" class="modal">
-  <div class="modal-box">
+  <div class="modal-box max-w-xl">
     <turbo-frame id="comm_modal_frame"
                  data-action="turbo:frame-load->modal#open">
     </turbo-frame>
