--- a/app/views/party/parties/_address_fields.html.erb
+++ b/app/views/party/parties/_address_fields.html.erb
@@ -5,9 +5,10 @@
       method: (@address.persisted? ? :patch : :post),
       data: { turbo_frame: "comm_modal_frame" } do |f| %>
 
-  <div class="grid gap-3"
-       data-controller="region-select"
-       data-region-select-url-value="<%= ref_regions_path(format: :json) %>">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-4"
+        data-controller="region-select"
+        data-region-select-url-value="<%= ref_regions_path(format: :json) %>"
+        data-region-select-current-region-value="<%= @address&.region_code %>">
 
     <!-- Type -->
     <div class="select">
